Update docs and comments for the serializer cutover
The java-serializer rule still described XStream + the reflection Feature as the
serialization path; rewrite it for the generated, reflection-free serializer and
the now-unneeded native reflection registration. Also drop two stale
'XStream serialize' mentions in the perf harness comments.